<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.qwerfghi.draganddraw.DrawingView
        android:id="@+id/drawing_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/circle_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/circle" />

        <Button
            android:id="@+id/oval_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oval" />

        <Button
            android:id="@+id/square_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/square" />

        <Button
            android:id="@+id/rectangle_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rectangle" />

        <Button
            android:id="@+id/line_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line" />

        <Button
            android:id="@+id/line_color_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line_color" />

        <TextView
            android:id="@+id/hui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line_thickness" />

        <SeekBar
            android:id="@+id/line_thickness_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>

</RelativeLayout>